CSS: Add media query for fixing header on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -239,9 +239,25 @@ canvas {
 
 /* -----------------------------------> Media queries */
 
-/*(Burger Menu */
+/* Burger Menu */
 @media (max-width: 992px) {
   .navbar-collapse .nav-link::after {
     display: none !important;
+  }
+}
+
+/* Fix Header */
+@media (max-width: 600px) {
+  #header h1 {
+    font-size: 1.4rem;
+    line-height: 1.2;
+    padding: 0.5rem 0;
+    -webkit-text-stroke: 0.7px var(--accent-primary);
+  }
+  .header-box {
+    padding: 0.5rem 0.7rem;
+  }
+  .monster-gif {
+    width: 24px;
   }
 }
